# Calorie-Calculator

./: README.md  manage.py  pyproject.toml  requirements.txt
src/calories/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
src/calories/migrations/: __init__.py
src/calories/static/calories/css/: style.css
src/calories/templates/calories/: auth_login.html  auth_register.html  base.html  calculator.html  dashboard.html  django_calorie_calculator_5_templates_bootstrap_5.html  food_form.html  food_list.html  meal_form.html  meal_list.html  profile_form.html
src/calories/templates/calories/includes/: navbar.html
src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: django_calorie_calculator_7_tests.py
