[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "django-calorie-calculator"
version = "0.1.0"
description = "Calorie Calculator in Django (src/ layout)"
readme = "README.md"
authors = [
{ name = "Mobin Yousefi", email = "mobinyousefi.cs@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
"Django>=5.0,<6.0",
"python-dotenv>=1.0"
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]


[tool.ruff]
line-length = 100
select = ["E","F","I","UP","N"]